/*
 * $Id: ChangeLog,v 1.1722 2003/11/14 23:17:29 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-15 01:50 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Fix a bug introduced in last change in the Picture method.

2003-11-13 23:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/cstr.prg
  * source/rtl/dumpvar.prg
  * tests/hash.prg
  * tests/hashmass.prg
  * tests/serialize.prg
  * tests/tstclsdbg.prg
    * Revised :> to =>

2003-11-14 20:44 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/empty.c
    ! Added hashes; if they are not empty, now Empty() returns false.

  * source/rtl/hbreadini.prg
  * tests/parseini.prg
    * Using hashes instead of TAssociative array

2003-11-14 17:30 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbhashapi.h
  * source/vm/hash.c
    + Added hb_hashGetKeys() and hb_hashGetValues() to the internal api, HGETKEYS()
      and HGETVALUES() now refer to this one

  * source/rtl/cstr.prg
    ! Using now "=>" as hash separator in ValToPrg()

  * source/vm/hvm.c
    + Added ":" accessor token to hashes. Currently, it uses the UPPERCASED message
      name; it should be good for translating old programs unless they make differences
      between character cases. Hashes reply also to CLASSNAME, KEYS, VALUES and CLASSH
      messages.

  * tests/hash.prg
    + Added test of new ":" grammar

2003-11-14 00:15 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Avoid execution of ::ParsePict() if ::HasFocus is FALSE
      Reported by Luis Krause Mantilla

2003-11-13 17:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbclass.ch
    * Added few missing escapes (\) in STRICT_OO mode.

  * utils/hbpp/hbpp.c