@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1722 2003/11/14 23:17:29 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1723 2003/11/15 04:48:10 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+
+2003-11-15 17:57 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/vm/hvm.c
+  * source/vm/hash.c
+  * tests/hash.prg
+    ! Added "IN" operator for hashes (and relative test).
+
+  * tests/Makefile
+    ! removed cdx/ntx for MT (they are currently thread insensitive)
 
 2003-11-15 01:50 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/rtl/tget.prg
